--- a/content/content-header.html
+++ b/content/content-header.html
@@ -1,2 +1,2 @@
-     <img class=“header-image“ src="JT_Jacek_Tulacz_logo.png" alt="Logo" width="130" height="100">
      <p class="header-title">Bewerbungshomepage Jacek Tulacz</p>
+     <img class="header-image" src="JT_Jacek_Tulacz_logo.png" alt="Logo" width="130" height="100">
