--- a/content/content-block.html
+++ b/content/content-block.html
@@ -1,2 +1,3 @@
-	       <p class="title">Dies ist eine Überschrift</p> 
+	       <p class="title"><span class='bigger'>Dies ist eine Überschrift</span></p>
 	       <p>Dies ist ein Beispieltext</p>
+
