--- a/content/content-block.html
+++ b/content/content-block.html
@@ -1,3 +1,3 @@
 	       <p class="title"><span class='bigger'>Dies ist eine Überschrift</span></p>
 	       <p>Dies ist ein Beispieltext</p>
-
+		    <img class="Icon-image" src="Icon.png" alt="Icon" width="auto" height="300">
