--- a/content/content-news.html
+++ b/content/content-news.html
@@ -1,5 +1,5 @@
                                           <p class = ”teaser_date”>05.12.2025</p>
-                                          <p class = ”teaser_title”>News-Titel</p>
-                                          <p class = ”teaser_text”>Dies ist der News-Text</p>
-                                 <a href = ”berufsbildung.html” class=“teaser_link“>...mehr</a>
+                                          <p class = ”teaser_title”>Bewerbungshomepage </p>
+                                          <p class = ”teaser_text”>Persönliche Unterlagen</p>
+                                 <a href = ”berufsbildung.html” class=“teaser_link“>Passwort geschütztes Bereich</a>
                                  <hr class=“teaser_border“>
